attempting to fix hero text styling on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -274,7 +274,15 @@ body {
 
 @media (max-width: 900px){
   .hero-text {
-    top: 50%;
+    right: 20%;
+    width: 20vw;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    top: 40%;
+    text-align: center;
+    line-height: 1em;
+
   }
 }
 
